--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>Contact</title>
-</head>
+
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
+
 <body>
 
-	<head>
+	<header>
 		<h1>Shannon Berry-Heller</h1>
-	</head>
+	</header>
 
 	<br>
 	<section id="headtype">
@@ -24,12 +26,18 @@
 		Message<br>
 		<textarea rows="20" cols="60"></textarea>
 		<br><br>
-		<input type="submit" value="Submit">
+		<input id="button" type="submit" value="Submit">
 	</form>
 	
 	<section id="headtype">
 		<h3>Connect with Me</h3>
 	</section>
+
+	<img src="assets/images/Github.png" alt="Github">
+
+	<img src="assets/images/Linkedin.png" alt="Linkedin">
+
+	<img src="/assets/images/Stack_Overflow.png" alt="Stack Overflow">
 
 </body>
 </html>
