--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,17 @@
 		<h3>Connect with Me</h3>
 	</section>
 
-	<img src="assets/images/Github.png" alt="Github">
+	<img src="assets/images/Github.png" 
+		alt="Github"
+		style="width:70px;height:70px">
 
-	<img src="assets/images/Linkedin.png" alt="Linkedin">
+	<img src="assets/images/Linkedin.png" 
+		alt="Linkedin"
+		style="width:70px;height:70px">
 
-	<img src="/assets/images/Stack_Overflow.png" alt="Stack Overflow">
+	<img src="/assets/images/Stack.png" 	
+		alt="Stack Overflow"
+		style="width:70px;height:70px">
 
 </body>
 </html>
