--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 			<h2>About Me</h2>
 
-		<img src="assets/images/profile.jpg">
+		<img src="assets/images/profile.jpg"
+			style="width:200px;height:200px">
 </body>
 </html>
