--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<title>About</title>
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
-	<header>
-		<h1>Shannon Berry-Heller</h1>
-	</header>
+
+<!--Navigation Bar-->
+
+<div class="header">
+		<ul>
+			<li><h1>Shannon Berry-Heller</h1></li>
+			<li><a href="index.html">About</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+</div>
+
+
+<!--Main Content-->
+
+<article class="main">
 
 		<h2>Portfolio</h2>
 
-		<h3>Connect with Me</h3>
+</article>
 
+<!--Links-->
+
+<aside class="links">
+		<ul>
+			<li><h3>Connect with Me</h3><li>
+			<li><a href="http://github.com/Sberry5" target="_blank">
+			<img src="assets/images/Github.png" alt="Github" style="width:50px;height:50px"></a></li>
+
+			<li><a href="https://www.linkedin.com/in/shannon-berry-heller-7a720a65" target="_blank">
+			<img src="assets/images/Linkedin.png" alt="Linkedin" style="width:50px;height:50px"></a></li>
+			<li><a href="http://stackexchange/com/users/1446776/sberry5" target="_blank">
+			<img src="assets/images/Stack.png" alt="Stack Overflow" style="width:50px;height:50px"></a></li>
+		</ul>
+</aside>
+
+
+<!--Footer-->
+<br>
+
+<div id="footer">
+	<footer>
+	<p>&#9400 Copyright 2017 Shannon Berry-Heller</p>
+	</footer>
+</div>
 
 </body>
 </html>
