--- a/index.html
+++ b/index.html
@@ -7,13 +7,62 @@
 </head>
 <body>
 
-		<header>
-			<h1>Shannon Berry-Heller</h1>
-		</header>
+
+<!--Navigation Bar-->
+
+<div class="header">
+		<ul>
+			<li><h1>Shannon Berry-Heller</h1></li>
+			<li><a href="index.html">About</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+</div>
+
+
+<!--Main Content-->
+
+<article class="main">
 
 			<h2>About Me</h2>
 
-		<img src="assets/images/profile.jpg"
-			style="width:200px;height:200px">
+		<img id="me" src="assets/images/profile.jpg"
+			style="width:200px;height:200px" align="left">
+				
+			<p id="bio">With a passion for challenges, Shannon Berry-Heller, works with clients to help them create a clear and comprehensive web presence. Shannon knows the importance of clarity and design when it comes to presenting your work to the world.</p>
+</article>
+
+<!--Links-->
+
+<aside class="links">
+		<ul>
+			<li><h3>Connect with Me</h3><li>
+		<li><a href="http://github.com/Sberry5" target="_blank">
+		<img src="assets/images/Github.png"
+			alt="Github"
+			style="width:50px;height:50px"></a></li>
+
+		<li><a href="https://www.linkedin.com/in/shannon-berry-heller-7a720a65" target="_blank">
+		<img src="assets/images/Linkedin.png"
+			alt="Linkedin"
+			style="width:50px;height:50px"></a></li>
+
+		<li><a href="http://stackexchange/com/users/1446776/sberry5" target="_blank">
+		<img src="assets/images/Stack.png"
+			alt="Stack Overflow"
+			style="width:50px;height:50px"></a></li>
+		</ul>
+</aside>
+
+
+<!--Footer-->
+<br>
+
+<div id="footer">
+	<footer>
+	<p>&#9400 Copyright 2017 Shannon Berry-Heller</p>
+	</footer>
+</div>
+
 </body>
 </html>
