--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Contact</title>
 
+	<!--<link rel="stylesheet" type="text/css" href="assets/css/style.css">-->
+
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -11,7 +13,7 @@
 
 <!--Navigation Bar-->
 
-<div class="header">
+<div class="navbar">
 		<ul>
 		<li><h1>Shannon Berry-Heller</h1></li>
 		<li><a href="index.html">About</a></li>
@@ -24,9 +26,8 @@
 <!--Main Content-->
 
 <article class="main">
-
-		<h2>Contact</h2>
-
+	<ul>
+	<li><h2>Contact</h2>
 	<form action="/action_page.php">Name<br><input type="text" size="60">
 		<br>Email<br>
 		<input type="Email" id="Email" size="60">
@@ -35,20 +36,21 @@
 		<br><br>
 		<input id="button" type="submit" value="Submit">
 	</form>
+	</ul>
 </article>
 
 
 <!--Links-->
 
 <aside class="links">
-	
-		<h3>Connect with Me</h3>
-		<a href="http://github.com/Sberry5" target="_blank"><img src="assets/images/Github.png" alt="Github" style="width:50px;height:50px"></a>
+	<ul>
+		<li><h3>Connect with Me</h3>
+		<a href="http://github.com/Sberry5" target="_blank"><img src="assets/images/Github.png" alt="Github" style="width:50px;height:50px"></a></li>
 
-		<a href="https://www.linkedin.com/in/shannon-berry-heller-7a720a65" target="_blank"><img src="assets/images/Linkedin.png" alt="Linkedin" style="width:50px;height:50px"></a>
+		<li><a href="https://www.linkedin.com/in/shannon-berry-heller-7a720a65" target="_blank"><img src="assets/images/Linkedin.png" alt="Linkedin" style="width:50px;height:50px"></a></li><li>
 
-		<a href="http://stackexchange/com/users/1446776/sberry5" target="_blank"><img src="assets/images/Stack.png" alt="Stack Overflow" style="width:50px;height:50px"></a>
-	
+		<li><a href="http://stackexchange/com/users/1446776/sberry5" target="_blank"><img src="assets/images/Stack.png" alt="Stack Overflow" style="width:50px;height:50px"></a></li>
+	</ul>
 </aside>
 
 
