--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
 	<title>About</title>
 
+	<!--<link rel="stylesheet" type="text/css" href="assets/css/style.css">-->
+
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
 
 <!--Navigation Bar-->
+<br>
 
-<div class="header">
+<div id="navbar">
 		<ul>
 			<li><h1>Shannon Berry-Heller</h1></li>
 			<li><a href="index.html">About</a></li>
@@ -21,6 +24,7 @@
 
 
 <!--Main Content-->
+<br>
 
 <article class="main">
 
@@ -33,6 +37,7 @@
 </article>
 
 <!--Links-->
+<br>
 
 <aside class="links">
 		<ul>
