--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,8 @@
 <head>
 	<title>About</title>
 
+	<!--<link rel="stylesheet" type="text/css" href="assets/css/style.css">-->
+
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
@@ -10,7 +12,7 @@
 
 <!--Navigation Bar-->
 
-<div class="header">
+<div class="navbar">
 		<ul>
 			<li><h1>Shannon Berry-Heller</h1></li>
 			<li><a href="index.html">About</a></li>
@@ -38,6 +40,7 @@
 
 			<li><a href="https://www.linkedin.com/in/shannon-berry-heller-7a720a65" target="_blank">
 			<img src="assets/images/Linkedin.png" alt="Linkedin" style="width:50px;height:50px"></a></li>
+
 			<li><a href="http://stackexchange/com/users/1446776/sberry5" target="_blank">
 			<img src="assets/images/Stack.png" alt="Stack Overflow" style="width:50px;height:50px"></a></li>
 		</ul>
