--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
 
 <!--Navigation Bar-->
-<br>
 
-<div id="navbar">
+<div class="navbar">
 		<ul>
-			<li><h1>Shannon Berry-Heller</h1></li>
-			<li><a href="index.html">About</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="contact.html">Contact</a></li>
+		<li><h1>Shannon Berry-Heller</h1></li>
+		<li><a href="index.html" id="navbarlinks">About</a></li>
+		<li><a href="portfolio.html" id="navbarlinks">Portfolio</a></li>
+		<li><a href="contact.html" id="navbarlinks">Contact</a></li>
 		</ul>
 </div>
 
@@ -26,14 +25,15 @@
 <!--Main Content-->
 <br>
 
-<article class="main">
-
+<article class="main-index">
 			<h2>About Me</h2>
 
 		<img id="me" src="assets/images/profile.jpg"
 			style="width:200px;height:200px" align="left">
 				
-			<p id="bio">With a passion for challenges, Shannon Berry-Heller, works with clients to help them create a clear and comprehensive web presence. Shannon knows the importance of clarity and design when it comes to presenting your work to the world.</p>
+			<p id="bio">With experience in project management, customer service, print and web development, Shannon Berry-Heller's dedication to detail stands out. </p>
+			<br>
+			<p>In her free time Shannon is a competitive rower, avid reader, and loves working with others.</p>
 </article>
 
 <!--Links-->
@@ -42,6 +42,7 @@
 <aside class="links">
 		<ul>
 			<li><h3>Connect with Me</h3><li>
+			<br>
 		<li><a href="http://github.com/Sberry5" target="_blank">
 		<img src="assets/images/Github.png"
 			alt="Github"
