--- a/portfolio.html
+++ b/portfolio.html
@@ -14,20 +14,26 @@
 
 <div class="navbar">
 		<ul>
-			<li><h1>Shannon Berry-Heller</h1></li>
-			<li><a href="index.html">About</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="contact.html">Contact</a></li>
+		<li><h1>Shannon Berry-Heller</h1></li>
+		<li><a href="index.html">About</a></li>
+		<li><a href="portfolio.html" id="middlelink">Portfolio</a></li>
+		<li><a href="contact.html">Contact</a></li>
 		</ul>
 </div>
 
 
 <!--Main Content-->
 
-<article class="main">
+<article class="main-portfolio">
 
-		<h2>Portfolio</h2>
-
+	<h2>Portfolio</h2>
+		<ul>
+		<li><img id="portfolioimg" src="http://lorempixel.com/400/200"><li>
+		<li><img id="portfolioimg" src="http://lorempixel.com/400/200"><li>
+		<li><img id="portfolioimg" src="http://lorempixel.com/400/200"><li>
+		<li><img id="portfolioimg" src="http://lorempixel.com/400/200"><li>
+		<li><img id="portfolioimg" src="http://lorempixel.com/400/200"><li>
+		</ul>
 </article>
 
 <!--Links-->
@@ -46,15 +52,7 @@
 		</ul>
 </aside>
 
-
-<!--Footer-->
-<br>
-
-<div id="footer">
-	<footer>
-	<p>&#9400 Copyright 2017 Shannon Berry-Heller</p>
-	</footer>
-</div>
+<!--Per assignment screenshots this page does not have a footer-->
 
 </body>
 </html>
