--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 		<ul>
 		<li><h1>Shannon Berry-Heller</h1></li>
 		<li><a href="index.html">About</a></li>
-		<li><a href="portfolio.html">Portfolio</a></li>
+		<li><a href="portfolio.html" id="middlelink">Portfolio</a></li>
 		<li><a href="contact.html">Contact</a></li>
 		</ul>
 </div>
@@ -25,15 +25,15 @@
 
 <!--Main Content-->
 
-<article class="main">
+<article class="main-contact">
 	<ul>
 	<li><h2>Contact</h2>
 	<form action="/action_page.php">Name<br><input type="text" size="60">
-		<br>Email<br>
+		<p>Email</p>
 		<input type="Email" id="Email" size="60">
-		<br>Message<br>
+		<p>Message</p>
 		<textarea rows="20" cols="60"></textarea>
-		<br><br>
+		<br>
 		<input id="button" type="submit" value="Submit">
 	</form>
 	</ul>
@@ -41,16 +41,27 @@
 
 
 <!--Links-->
+<br>
 
 <aside class="links">
-	<ul>
-		<li><h3>Connect with Me</h3>
-		<a href="http://github.com/Sberry5" target="_blank"><img src="assets/images/Github.png" alt="Github" style="width:50px;height:50px"></a></li>
+		<ul>
+			<li><h3>Connect with Me</h3><li>
+			<br>
+		<li><a href="http://github.com/Sberry5" target="_blank">
+		<img src="assets/images/Github.png"
+			alt="Github"
+			style="width:50px;height:50px"></a></li>
 
-		<li><a href="https://www.linkedin.com/in/shannon-berry-heller-7a720a65" target="_blank"><img src="assets/images/Linkedin.png" alt="Linkedin" style="width:50px;height:50px"></a></li><li>
+		<li><a href="https://www.linkedin.com/in/shannon-berry-heller-7a720a65" target="_blank">
+		<img src="assets/images/Linkedin.png"
+			alt="Linkedin"
+			style="width:50px;height:50px"></a></li>
 
-		<li><a href="http://stackexchange/com/users/1446776/sberry5" target="_blank"><img src="assets/images/Stack.png" alt="Stack Overflow" style="width:50px;height:50px"></a></li>
-	</ul>
+		<li><a href="http://stackexchange/com/users/1446776/sberry5" target="_blank">
+		<img src="assets/images/Stack.png"
+			alt="Stack Overflow"
+			style="width:50px;height:50px"></a></li>
+		</ul>
 </aside>
 
 
